--- a/DomainResolver.fsproj
+++ b/DomainResolver.fsproj
@@ -3,7 +3,7 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <PackageId>Tuc.DomainResolver</PackageId>
     <Version>1.0.0</Version>
     <RepositoryUrl>https://github.com/TypedUseCase/domain-resolver</RepositoryUrl>
