--- a/DomainResolver.fsproj
+++ b/DomainResolver.fsproj
@@ -5,8 +5,12 @@
     <OutputType>Library</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <PackageId>Tuc.DomainResolver</PackageId>
+    <Description>Library for resolving a Domain types out of a F# script (.fsx) file(s).</Description>
     <Version>1.0.0</Version>
-    <RepositoryUrl>https://github.com/TypedUseCase/domain-resolver</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/TypedUseCase/domain-resolver</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/TypedUseCase/domain-resolver.git</RepositoryUrl>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <PackageTags>typed-use-case;tuc;tuc-language;ddd;</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
