--- a/DomainResolver.fsproj
+++ b/DomainResolver.fsproj
@@ -3,7 +3,7 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <PackageId>Tuc.DomainResolver</PackageId>
     <Description>Library for resolving a Domain types out of a F# script (.fsx) file(s).</Description>
     <Version>1.0.0</Version>
